# utilz

./: .clang-format  .clang-tidy.txt  .gitignore  CMakeLists.txt  LICENSE  README.md
test/: flat-map.cpp  math.cpp  random.cpp  sf-plot.cpp  strings.cpp
utilz/: flat-map.hpp  math.hpp  random.hpp  sf-operators.hpp  sf-plot.hpp  sizet-literal.hpp  strings.hpp
